ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gausstalk-frontend
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - talk.gausslabs.ai
    secretName: aks-ingress-tls
  rules:
  - host: talk.gausslabs.ai
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gausstalk-frontend
            port:
              number: 80
